# SecurPass

./: README.md  main.py  pyproject.toml
.github/workflows/: python-tests.yml
securpass/: SecurePassController.py  __init__.py  config.py  data_retrieval.py  data_save.py  errors.py  main.py  messagebox.py  password_generator.py  resources.py  ui.py
tests/: test_main.py
